@@ -5,10 +5,11 @@
     <link rel="stylesheet" type = "text/css" href="{% static '/css/main.css' %}">
 
     <form method="POST">
+    <div class = "login" id = "Login">
+        <header>LMS LITE</header>
     {% csrf_token %}
     {{ form.as_p }}
-        <div>
-            <input id= "submit" type="submit" name="submit" value="Log In">
-        </div>
+        <input id= "submit" type="submit" name="submit" value="Log In">
+    </div>
     </form>
 {% endblock content %}
